Update and rename Home.html to index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
             <!-- Logo -->
             <a class="navbar-brand" href="Home.html">
-                <img src="Images/Logo.png" alt="logo" style="width:130px;">
+                <img src="Logo.png" alt="logo" style="width:130px;">
             </a>
         </nav>
     </header>
@@ -36,14 +36,14 @@
         <div class="side">
             <center>
             <h3>الكاتب :</h3>
-            <img src="Images/Img.jpg" alt="صورة الكاتب" width="100px" height="100px">
+            <img src="Img.jpg" alt="صورة الكاتب" width="100px" height="100px">
             <p>بعض الملومات عن الكاتب ...</p><br /><hr /><br />
             <h3>مواضيع ذات صله :</h3>
-            <img src="Images/Img1.jpg" alt="logo" width="100px">
+            <img src="Img1.jpg" alt="logo" width="100px">
             <h6>عنوان الموضوع</h6><hr style="width: 50%;"/>
-            <img src="Images/Img2.jpg" alt="logo" width="100px">
+            <img src="Img2.jpg" alt="logo" width="100px">
             <h6>عنوان الموضوع</h6><hr style="width: 50%;"/>
-            <img src="Images/Img3.jpg" alt="logo" width="100px">
+            <img src="Img3.jpg" alt="logo" width="100px">
             <h6>عنوان الموضوع</h6><br /><hr /><br />
             <h3> الإعلانات :</h3>
             </center>
@@ -51,7 +51,7 @@
         </div>
         <div class="main">
             <div class="topic">
-                <img src="Images/Img1.jpg" alt="صورة الموضوع" class="image">
+                <img src="Img1.jpg" alt="صورة الموضوع" class="image">
                 <div class="text">
                     <h2 class="arabic">عنوان الموضوع</h2>
                     <h5 class="arabic">تاريخ النشر: 1 يناير, 2021</h5>
@@ -60,7 +60,7 @@
             </div>
             <br /><hr /><br />
             <div class="topic">
-                <img src="Images/Img2.jpg" alt="صورة الموضوع" class="image">
+                <img src="Img2.jpg" alt="صورة الموضوع" class="image">
                 <div class="text">
                     <h2 class="arabic">عنوان الموضوع</h2>
                     <h5 class="arabic">تاريخ النشر: 1 يناير, 2021</h5>
@@ -69,7 +69,7 @@
             </div>
             <br /><hr /><br />
             <div class="topic">
-                <img src="Images/Img3.jpg" alt="صورة الموضوع" class="image">
+                <img src="Img3.jpg" alt="صورة الموضوع" class="image">
                 <div class="text">
                     <h2 class="arabic">عنوان الموضوع</h2>
                     <h5 class="arabic">تاريخ النشر: 1 يناير, 2021</h5>
@@ -84,10 +84,10 @@
     <footer>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <ul class="navbar-nav sticky-top mr-auto">
-                <li class="nav-item"><a class="nav-link" href="www.twitter.com"><img src="Images/twitter.png" alt="logo" style="width:10%;"> تويتر</a></li>
-                <li class="nav-item"><a class="nav-link" href="www.facebook.com"><img src="Images/facebook.png" alt="logo" style="width:10%;"> فيسبوك</a></li>
-                <li class="nav-item"><a class="nav-link" href="www.instagram.com"><img src="Images/instagram.png" alt="logo" style="width:10%;"> انستقرام</a></li>
-                <li class="nav-item"><a class="nav-link" href="www.google.com"><img src="Images/google.png" alt="logo" style="width:10%;"> +جوجل</a></li>
+                <li class="nav-item"><a class="nav-link" href="www.twitter.com"><img src="twitter.png" alt="logo" style="width:10%;"> تويتر</a></li>
+                <li class="nav-item"><a class="nav-link" href="www.facebook.com"><img src="facebook.png" alt="logo" style="width:10%;"> فيسبوك</a></li>
+                <li class="nav-item"><a class="nav-link" href="www.instagram.com"><img src="instagram.png" alt="logo" style="width:10%;"> انستقرام</a></li>
+                <li class="nav-item"><a class="nav-link" href="www.google.com"><img src="google.png" alt="logo" style="width:10%;"> +جوجل</a></li>
             </ul>
         </nav>
         <div style="color:rgb(139, 139, 139); background-color:rgb(39, 39, 39); text-align: center;">
